--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Django Blog</title>
+    <link rel="stylesheet" type="text/css" href="{% static '/blog/css/base.css' %}">
   </head>
   <body>
     <header>
