--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Django Blog</title>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static '/blog/css/base.css' %}">
   </head>
   <body>
