--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -18,6 +18,7 @@
     </header>
     {% if user.is_authenticated %}
       <p>Hi {{ user.username }}</p>
+      <a href="{% url 'logout' %}">Log Out</a>
     {% else %}
       <a href="{% url 'login' %}">Log In</a>
     {% endif %}
